--- a/api1/packages.config
+++ b/api1/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BookSleeve" version="1.3.41" targetFramework="net40" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
   <package id="EntityFramework.ru" version="5.0.0" targetFramework="net40" />
   <package id="jQuery" version="1.8.2" targetFramework="net40" />
